<resources>
    <string name="app_name">FoodMarketApp</string>
    <string name="main_nav_title">Главная</string>
    <string name="basket_nav_title">Корзина</string>
    <string name="search_nav_title">Поиск</string>
    <string name="account_nav_title">Аккаунт</string>
    <string name="fragment_search_label">Поиск</string>
    <string name="fragment_account_label">Профиль</string>
    <string name="location_str">Москва</string>
    <string name="location_date">12 Августа, 2023</string>
    <string name="category_item">category_item</string>
    <string name="category_name">some category</string>
    <string name="dish_category_title">Some category</string>
    <string name="dish_type_name">some dish type</string>
    <string name="dish_name">Some Dish</string>
    <string name="dish_detail_name">Some dish name</string>
    <string name="dish_detail_price">Some price</string>
    <string name="dish_detail_weight">· Some weight</string>
    <string name="dish_detail_description">Some description</string>
</resources>