<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dish_item_dialog_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/dish_detail_photo_card"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#F8F7F5"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/dish_detail_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="14dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <androidx.cardview.widget.CardView
                android:id="@+id/likeDishDetail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:src="@drawable/dish_item_like_icon" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/closeDishDetail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:src="@drawable/dish_item_close_icon" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dish_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dish_detail_name"
        android:textColor="#000000"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/dish_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_detail_price"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dish_detail_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_detail_weight"
            android:textColor="#80000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/dish_detail_price"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dish_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dish_detail_description"
        android:textColor="#A6000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/addToBag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3364E0"
        android:text="Добавить в корзину"
        android:textSize="16sp" />

</LinearLayout>
